Fix game display issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -521,6 +521,9 @@ body {
     flex-direction: column;
     height: auto;
 
+    height: 95%;
+    width: 90%;
+
     border: 20px solid rgba(108, 122, 137, .5);
     border-radius: 20px;
   }
@@ -529,6 +532,8 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+
+    overflow-y: auto;
   }
 
   .player {
